[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident-triage-env"
version = "1.0.0"
description = "Incident Response Triage Environment for OpenEnv — simulates real-world IT/DevOps on-call incident management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rohan Jain", email = "rohanjain1648@gmail.com"},
]
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "incident_triage_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "incident_triage_env",
    "incident_triage_env.server",
]
package-dir = {
    "incident_triage_env" = ".",
    "incident_triage_env.server" = "server",
}
